2009-12-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: When calling
	  SelectWindow, make sure to grab focus, because it may have
	  lost focus to a pad.

2009-12-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/DocumentSwitcher.cs: When destroying the
	  document switcher, don't present the IDE main window.
	  Instead Gdk.Window.Focus on the toplevel of the selected
	  item. Fixes selecting floating pads, and avoids Mac issues
	  with Gtk.Window.Present.

2009-12-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs: Use
	  proper enums for IndentStyle values instead of letting them
	  get cached as strings, so they don't break the editor's
	  property change handler.

2009-12-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/CommonAboutDialog.cs: Fix
	  trailing comma when list has odd number of items.

2009-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/CommonAboutDialog.cs: Add Jakub
	  Steiner.

2009-12-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml: Use some of the new icons.

2009-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* icons/SplashScreen.png:
	* MonoDevelop.Ide.Gui.Dialogs/SplashScreen.cs: Update splash.

2009-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.addin.xml:
	* icons/tools-external-tools-24.png:
	* icons/tools-external-tools-16.png: Add new icons.

2009-12-11  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Fix jump-to
	  regression.

2009-12-10  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Allow resorting by
	  severity.

2009-12-09  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/EmptyHTMLFile.xft.xml: Sane casing on HTML tags.
